@@ -15,7 +15,7 @@
 #ifndef DOXYGEN_SHOULD_SKIP_THIS
 extern "C" {
   struct _xmlAttr;
-};
+}
 #endif //#ifndef DOXYGEN_SHOULD_SKIP_THIS
 
 namespace xmlpp
