@@ -22,7 +22,7 @@
 extern "C" {
   struct _xmlDoc;
   struct _xmlEntity;
-};
+}
 #endif //DOXYGEN_SHOULD_SKIP_THIS
 
 namespace xmlpp 
