@@ -17,7 +17,7 @@
 extern "C"
 {
   struct _xmlOutputBuffer;
-};
+}
 #endif //DOXYGEN_SHOULD_SKIP_THIS
 
 namespace xmlpp
@@ -78,6 +78,6 @@ namespace xmlpp
       friend struct OutputBufferCallback;
   };
 
-};
+}
 
 #endif
